# homology

./: .travis.yml  CMakeLists.txt  README.md
include/: matrix.h  ring.h  z.h
test/: exampletest.cpp  test1.cpp
test/matrix_test/: addition.cpp  equality.cpp  inequality.cpp  initialization.cpp  iterator.cpp  times.cpp
test/z_test/: equality.cpp  initialization.cpp  minus.cpp  plus.cpp  times.cpp  unaryminus.cpp  unaryplus.cpp
